[gd_scene format=3 uid="uid://dmwh4ker72r5f"]

[ext_resource type="Script" uid="uid://uq1hifyfvg0o" path="res://game/ui/run_summary.gd" id="1_0gz0ty"]

[node name="RunSummary" type="Control" unique_id=306286268]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0gz0ty")

[node name="Margin" type="MarginContainer" parent="." unique_id=471918736]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBox" type="VBoxContainer" parent="Margin" unique_id=2055419691]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Margin/VBox" unique_id=220971322]
layout_mode = 2
text = "END RUN"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Margin/VBox" unique_id=1936157868]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="SummaryLabel" type="Label" parent="Margin/VBox" unique_id=450595126]
layout_mode = 2
text = "Run Complete
Joules Earned: 0
Threat Reached: 0"
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="Margin/VBox" unique_id=2033525902]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="Margin/VBox" unique_id=555546137]
layout_mode = 2
text = "Research / Upgrade"

[node name="RedeployButton" type="Button" parent="Margin/VBox" unique_id=828245872]
layout_mode = 2
text = "Redeploy"

[node name="SaveQuitButton" type="Button" parent="Margin/VBox" unique_id=2143653214]
layout_mode = 2
text = "Save & Quit to Menu"
